<resources>
    <string name="app_name">StockbitMini</string>
    <string name="atau">Atau</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="cancel_label">Batal</string>
    <string name="chat">Chat</string>
    <string name="daftar_sekarang">Daftar Sekarang</string>
    <string name="failed">Cannot get data, please try again later</string>
    <string name="lainnya">Lainnya</string>
    <string name="log_out">Log Out</string>
    <string name="login">Login</string>
    <string name="logout_dialog">Apa kamu yakin ingin logout?</string>
    <string name="lupa_password">Lupa Password</string>
    <string name="main">Main</string>
    <string name="masuk_dengan_fingerprint">Masuk dengan Fingerprint</string>
    <string name="masuk_facebook">Masuk dengan Facebook</string>
    <string name="masuk_google">Masuk dengan Google</string>
    <string name="masuk">Masuk</string>
    <string name="no_internet">No internet connection</string>
    <string name="ok_label">OK</string>
    <string name="password_not_valid">Password minimum 6 digit</string>
    <string name="password">Password</string>
    <string name="portfolio">Portfolio</string>
    <string name="search">Search</string>
    <string name="splash">Splash</string>
    <string name="stream">Stream</string>
    <string name="username_not_valid">Harap periksa username kamu</string>
    <string name="username_or_email">Username or Email</string>
    <string name="view_profile">View Profile</string>
    <string name="watchlist">Watchlist</string>
</resources>