<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main_navigation"
    app:startDestination="@+id/navigation_splash">

    <fragment
        android:id="@+id/navigation_splash"
        android:name="com.yurry.stockbitmini.ui.splash.SplashFragment"
        android:label="@string/splash">
        <action
            android:id="@+id/action_navigation_splash_to_navigation_login"
            app:destination="@id/navigation_login" />
        <action
            android:id="@+id/action_navigation_splash_to_navigation_main"
            app:destination="@id/navigation_main" />
    </fragment>

    <fragment
        android:id="@+id/navigation_main"
        android:name="com.yurry.stockbitmini.ui.main.MainFragment"
        android:label="@string/main">
        <action
            android:id="@+id/action_navigation_main_to_navigation_login"
            app:destination="@id/navigation_login" />
    </fragment>

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.yurry.stockbitmini.ui.login.LoginFragment"
        android:label="@string/login">
        <action
            android:id="@+id/action_navigation_login_to_navigation_main"
            app:destination="@id/navigation_main" />
    </fragment>

</navigation>